[package]
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
description = "A color manipulating library"
homepage = "https://github.com/sharkdp/pastel"
license = "MIT"
name = "blush"
readme = "README.md"
repository = "https://github.com/bresilla/blush"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.7"
nom = "5"
lazy_static = "1.3.0"

[build-dependencies]
lazy_static = "1.3.0"

[dev-dependencies]
# approx = "0.3"
# criterion = "0.3"
